<resources>
    <string name="app_name">Asclepius</string>
    <string name="camera_x">CameraX</string>
    <string name="camera">Kamera</string>
    <string name="gallery">Galeri</string>
    <string name="analyze">Analyze</string>
    <string name="result">Hasil Analisis</string>
    <string name="image_classifier_failed">Image classifier failed to initialize. See error logs for details</string>
    <string name="preview_image">Preview Image</string>
    <string name="please_insert_the_image_file_first">Please insert the image file first!</string>
    <string name="the_classification_result_has_been_saved">The classification result has been saved</string>
    <string name="delete">Delete</string>
    <string name="the_classification_result_has_been_deleted">The classification result has been deleted</string>
    <string name="no_data_can_be_displayed">No data can be displayed</string>
    <string name="cancer_image_classification">Cancer Image Classification</string>
    <string name="history_list">History List</string>
    <string name="failed_to_display_top_headline_news">Failed to display top headline news</string>
    <string name="news_images">News Images</string>
</resources>