<?xml version="1.0" encoding="utf-8"?>
<com.google.android.material.card.MaterialCardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_gravity="center"
    android:layout_marginTop="14dp">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:ignore="UseCompoundDrawables">

        <ImageView
            android:id="@+id/iv_preview"
            android:layout_width="80dp"
            android:layout_height="80dp"
            android:layout_marginStart="18dp"
            android:contentDescription="@string/preview_image"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:src="@tools:sample/backgrounds/scenic" />

        <TextView
            android:id="@+id/tv_dateTaken"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:gravity="center"
            android:textAlignment="center"
            android:textSize="18sp"
            app:layout_constraintBottom_toBottomOf="@+id/iv_preview"
            app:layout_constraintEnd_toStartOf="@+id/ib_delete"
            app:layout_constraintStart_toEndOf="@+id/iv_preview"
            app:layout_constraintTop_toTopOf="@+id/iv_preview"
            tools:text="@string/result" />

        <ImageButton
            android:id="@+id/ib_delete"
            android:layout_width="50dp"
            android:layout_height="0dp"
            android:background="?attr/selectableItemBackgroundBorderless"
            android:contentDescription="@string/delete"
            android:src="@drawable/baseline_delete_24"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent" />
    </androidx.constraintlayout.widget.ConstraintLayout>

</com.google.android.material.card.MaterialCardView>