<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    style="@style/FullAppBar"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <ImageView
        android:id="@+id/iv_logo"
        android:layout_width="54dp"
        android:layout_height="54dp"
        android:layout_margin="12dp"
        android:contentDescription="@string/app_name"
        android:src="@mipmap/ic_launcher"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tv_name"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="14dp"
        android:layout_marginEnd="32dp"
        android:text="@string/app_name"
        android:textAlignment="textStart"
        android:textColor="?attr/colorOnPrimary"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toStartOf="@+id/ib_history"
        app:layout_constraintStart_toEndOf="@+id/iv_logo"
        app:layout_constraintTop_toTopOf="@+id/iv_logo" />

    <TextView
        android:id="@+id/tv_description"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/cancer_image_classification"
        android:textColor="?attr/colorOnPrimary"
        app:layout_constraintEnd_toEndOf="@+id/tv_name"
        app:layout_constraintStart_toStartOf="@+id/tv_name"
        app:layout_constraintTop_toBottomOf="@+id/tv_name" />

    <ImageButton
        android:id="@+id/ib_history"
        android:layout_width="50dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="12dp"
        android:background="?attr/selectableItemBackgroundBorderless"
        android:contentDescription="@string/history_list"
        android:src="@drawable/baseline_view_list_24"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>